--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "^2.23.12",
+    "gatsby-cli": "^2.12.66",
     "gatsby-core-utils": "^1.3.13",
     "gatsby-image": "^2.4.13",
     "gatsby-plugin-manifest": "^2.4.14",
