--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
+    "bootstrap": "^4.5.2",
     "gatsby": "^2.23.12",
-    "gatsby-cli": "^2.12.71",
+    "gatsby-cli": "^2.12.87",
     "gatsby-core-utils": "^1.3.13",
     "gatsby-image": "^2.4.13",
     "gatsby-plugin-manifest": "^2.4.14",
@@ -21,6 +25,7 @@
     "gatsby-transformer-sharp": "^2.5.12",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-refresh": "^0.8.3"
